# Phishermen

./: README.md  pyproject.toml
src/phisherman/: crew.py  main.py
src/phisherman/config/: agents.yaml  tasks.yaml
